# LLM-invoice-generation

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
src/: README.md  chat_llm.py  formats.py  gradio_app.py  logger_config.py  schema.py  styles.py  system_prompt.txt  utils.py
src/redis_importer/: import_data.py  mock_data.json
