[project]
name = "llm-invoice-generation"
version = "0.1.0"
description = "Invoice Generation Application backed by LLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.29.1",
    "openai>=1.78.1",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "redis>=6.1.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]
